﻿$Revision$
	$Author$ $Date$
	1. в сообщения об ошибках info->Message добавил флаг FMSG_WARNING
	2. убрана опция "Время до показа диалога отмены" , т.к. фактически ни где в коде не используется
	3. меню "Список функций" (FarEditor::showOutliner) нормально вводяться в фильтр 
	клавиши ":;-_~" и цифры с цифровой клавиатуры

#Revision: 1679
	Author: ctapmex Date: 2011-03-15 22:45:41 +0500 (Вт, 15 мар 2011)
	1. увеличение скорости за счет хака far
	2. не посылаем лишний раз ECTL_REDRAW -  hешает проблему мигания курсора.

#Revision: 1678
	Author: ctapmex Date: 2011-03-15 19:38:05 +0500 (Вт, 15 мар 2011)
	1. обновлен far sdk
	2. генерируем map файл.
