@@ -1,5 +1,11 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. исправлена ошибка игнорирования EEREDRAW_CHANGE
+	2. утечки памяти, лишние переменные, немного форматирования кода
+	3. исправлено отображение неверного числа схем в меню выбора схемы
+
+#Revision: 1680
+	Author: ctapmex Date: 2011-03-15 23:28:42 +0500 (Вт, 15 мар 2011)
 	1. в сообщения об ошибках info->Message добавил флаг FMSG_WARNING
 	2. убрана опция "Время до показа диалога отмены" , т.к. фактически ни где в коде не используется
 	3. меню "Список функций" (FarEditor::showOutliner) нормально вводяться в фильтр 
@@ -8,7 +14,7 @@
 #Revision: 1679
 	Author: ctapmex Date: 2011-03-15 22:45:41 +0500 (Вт, 15 мар 2011)
 	1. увеличение скорости за счет хака far
-	2. не посылаем лишний раз ECTL_REDRAW -  hешает проблему мигания курсора.
+	2. не посылаем лишний раз ECTL_REDRAW -  решает проблему мигания курсора.
 
 #Revision: 1678
 	Author: ctapmex Date: 2011-03-15 19:38:05 +0500 (Вт, 15 мар 2011)
